<resources>
    <string name="app_name">All Social Media Downloader</string>
    <string name="permission_message">You need to enable these  permission to use the app,</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="whatsapp_status_saver">WhatsApp Status Saver</string>
    <string name="facebook_video_downloader">Facebook Video Downloader</string>
    <string name="twitter_video_downloader">Twitter Video Downloader</string>
    <string name="instagram_video_downloader">Instagram Video Downloader</string>
    <string name="linkedin_video_downloader">Linkedin Video Downloader</string>
    <string name="tiktok_video_downloader">TikTok Video Downloader</string>
    <string name="browse">Browse</string>
    <string name="paste_link">Paste Link</string>
    <string name="facebook_website">https://m.facebook.com/</string>
    <string name="twitter_website">https://mobile.twitter.com</string>
    <string name="linkedin_website">https://www.linkedin.com</string>
    <string name="tiktok_website">https://www.tiktok.com</string>
    <string name="instagram_website">https://www.instagram.com</string>
    <string name="my_downloads">My Downloads</string>
    <string name="proceed">Proceed</string>
    <string name="download_">Download</string>
    <string name="paste_your_video_link_here">Paste your video url here</string>
    <string name="how_to_use">How to Use?</string>
    <string name="insta_download_text">All Social Media Downloader is a fast and free way for downloading and saving videos. Start by putting any instagram video URL in the box below and click download Button</string>
    <string name="tiktok_download_text">All Social Media Downloader is a fast and free way for downloading and saving videos. Start by putting any tiktok video URL in the box below and click download Button</string>
    <string name="twitter_download_text">All Social Media Downloader is a fast and free way for downloading and saving videos. Start by putting any twitter video URL in the box below and click download Button</string>
    <string name="linkedin_download_text">All Social Media Downloader is a fast and free way for downloading and saving videos. Start by putting any linkedin video URL in the box below and click download Button</string>
    <string name="fb_download_text">All Social Media Downloader is a fast and free way for downloading and saving videos. Start by putting any facebook video URL in the box below and click download Button</string>
    <string name="congrats">Congratulations!</string>
    <string name="download_this_video">Do you want to download this video?</string>
    <string name="yes">Yes</string>
    <string name="watch">Watch</string>
    <string name="copy">Copy</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="download_video_in_background">Downloading video in the background.\nCheck the notification for progress</string>
    <string name="video_is_already_downloading">Video is already downloading in background</string>
    <string name="no">No</string>
    <string name="generate_download_link">Generating Download Link..</string>
    <string name="no_video">No Video!</string>
    <string name="video_resource">Download button will start blinking and detect video after you play any video.</string>
    <string name="fill_the_field">Please fill the field</string>
    <string name="valid_url">Please enter a valid url</string>
    <string name="enter_fb_url">Please enter facebook url to download video!</string>
    <string name="enter_twitter_url">Please enter twitter url to download video!</string>
    <string name="enter_instagram_url">Please enter instagram url to download video!</string>
    <string name="enter_tiktok_url">Please enter tiktok url to download video!</string>
    <string name="delete">Delete</string>
    <string name="download_location">Download Location</string>
    <string name="share">Share</string>
    <string name="delmsg">Are you sure you ant to delete this?</string>
    <string name="file_deleted">File Deleted</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date_and_time">Date and Time</string>
    <string name="path">Path</string>
    <string name="no_file_s_downloaded_found">No File(s) Found!</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="linkdein">Linkedin</string>
    <string name="tiktok">TikTok</string>
    <string name="twitter">Twitter</string>
    <string name="whtsapp_status">WhatsApp Status</string>
    <string name="whtsapp_buisness_status">WhatsApp Business Status</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="no_photo_status">No Photo(s) Status Found!</string>
    <string name="no_video_status">No Video(s) Status Found!</string>
    <string name="repost">Repost</string>
    <string name="download_this_status">Do you want to download this status?</string>
    <string name="download_videos_from_your_favorite_sites">Download Videos from your favorite sites</string>
    <string name="how_to_download">How to download?</string>

    <string name="agree">I have read and accept the <u>Terms and Conditions</u>.</string>
    <string name="termsandc"><u>Terms and Conditions</u></string>

    <string name="termpara">Our product i.e (All Social Media Downloader) asks user to grant certain permissions . This access is used by the application in the following ways:\n\n
        \n1. Use storage permission to store the downloaded video.\n
        \n2. Use internet to download the video.\n
        \n3. Built-in codes to detect and download the video from specific websites.\n
        \n4. Support only social media websites to download videos.\n
    </string>
    <string name="nextbtn">Agree and Continue</string>
    <string name="do_you_want_exit">Do you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="rate_us">Rate Us</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="loading">Loading…</string>
    <string name="facebook_video_download_s">Facebook Video Downloaded</string>
    <string name="linkedin_video_downloaded">Linkedin Video Downloaded</string>
    <string name="instagram_video_downloaded">Instagram Video Downloaded</string>
    <string name="tiktok_video_downloaded">TikTok Video Downloaded</string>
    <string name="twitter_video_downloaded">Twitter Video Downloaded</string>
    <string name="policy_subTitle">If you click on Accept, you acknowledge that it makes the content present and all the content of our Terms of Service and implies that you have read our Privacy Policy.</string>
    <string name="agree1">Agree</string>

</resources>