<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".fragments.DownloadFragment">

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="ScrollViewSize">

            <en.all.social.downloader.app.online.utils.CategoryCustomButton
                android:id="@+id/fbCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:btntext="@string/facebook" />

            <en.all.social.downloader.app.online.utils.CategoryCustomButton
                android:id="@+id/instagramCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:btntext="@string/instagram" />

            <en.all.social.downloader.app.online.utils.CategoryCustomButton
                android:id="@+id/linkdeinCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:btntext="@string/linkdein" />

            <en.all.social.downloader.app.online.utils.CategoryCustomButton
                android:id="@+id/tiktokCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:btntext="@string/tiktok" />

            <en.all.social.downloader.app.online.utils.CategoryCustomButton
                android:id="@+id/twitterCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:btntext="@string/twitter" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_weight="2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="false" />

        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerInside"
                android:src="@drawable/no_file"
                android:tint="@color/colorAccent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/no_file_s_downloaded_found"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>